correction du code JS pour les filtres de la gallerie + modification du contraste de l'arrière plan des filtres actifs

--- a/assets/style.css
+++ b/assets/style.css
@@ -95,7 +95,7 @@ nav a {
 /* #gallery {
 	min-height: 100vh;
 } */
-.title{
+.title {
 	text-align: center;
 	padding-block: 2em;
 }
@@ -104,12 +104,16 @@ nav a {
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #BEB45A;
+	background-color: #807833;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
 	color: #000
 }
+.nav-link:hover {
+	cursor: pointer;
+}
+
 .item-column {
 	position: relative;
 	margin-bottom: 0 !important;
@@ -119,7 +123,6 @@ nav a {
 	content: "";
 	display: block;
 	padding-bottom: 100%;
-
 }
 .gallery-item {
 	position: absolute;
